--- a/lizards.html
+++ b/lizards.html
@@ -91,6 +91,9 @@
             </div>
         </div>
 
+		<a href = "https://validator.w3.org/nu/?doc=https%3A%2F%2Fpatelmaahi.github.io%2Fhome%2F" <img class = "validator" src = "images/html.png" width = "100" height = "50" alt = "html"/></a>
+		<a href = "https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fpatelmaahi.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" <img class = "validator" src = "images/css.png" width = "100" height = "50" alt = "css"/></a>
+
 		<footer class="footer">
 		<p> &copy; 2023 Maahi Patel. All rights reserved. </p>
 		</footer>
